--- a/0.Inicio/1.cover.tex
+++ b/0.Inicio/1.cover.tex
@@ -20,20 +20,20 @@
 \\ \vspace{2mm}
 \LARGE \textbf{Physics Engineering}
 \\ \vspace{10mm}
-\large Supervisor(s): PhD Leopoldo Petreanu and Prof. Bruno Gonçalves
+\large Supervisors: PhD Leopoldo Petreanu and Prof. Bruno Gonçalves
 \\ \vspace{15mm}
-\Large \textbf{Examination Committee}
-\\ \vspace{5mm}
-\large Chairperson:	Prof.  \\
-\large Supervisor: PhD Leopoldo Petreanu\\
-\large Co-Supervisor: Prof. Bruno Gonçalves \\
-\large Members of the Committe: Dr.  \\
-Prof. Lorem Ipsum
+%\Large \textbf{Examination Committee}
+%\\ \vspace{5mm}
+%\large Chairperson:	Prof.  \\
+%\large Supervisor: PhD Leopoldo Petreanu\\
+%\large Co-Supervisor: Prof. Bruno Gonçalves \\
+%\large Members of the Committe: Dr.  \\
+%Prof. Lorem Ipsum
  
 \vspace{15mm}
 
 %\Large \textbf{\todaythesis\today} \\
-\Large \textbf{September 2018} \\
+\Large \textbf{October 2018} \\
 \let\thepage\relax
 \end{flushleft}
 \pagebreak
