--- a/0.Inicio/3.Acknowledgments.tex
+++ b/0.Inicio/3.Acknowledgments.tex
@@ -1,32 +1,29 @@
 
 \pdfbookmark{Acknowledgments}{Acknowledgments}
-\begin{acknowledgments} 
+\section*{Acknowledgments} 
 
-%Leopoldo: Biology, hardware, previous software, guidance
-%
-%Tiago Marques: experiments, analysis, guidance
-%
-%Gabriela Fiorze: experiments
-%
-%Rhadika: Intrinsic, surgeries
-%
-%Oihane: Suit2p, intrinsic, surgeries
-%
-%Marina: surgeries
-%
-%Camille: surgeries
-%
-%Rodrigo: Tuning analysis
-%
-%Hedi: circuits, anatomy, connectivity
-%
-%all group: discussions, input, meetings, field knowledge, environment
-%
-%All Champalimaud comunity: CISS, posters, talks, seminars, knowledge of neuroscience
-%
-%Family, Francisco, friends.
+%This project represented for me an important search. My aim was getting to a point where I could understand more of neurosciences fields, in theory and in practice. Another large goal was to get familiar with the physics intermingling in yet again this other personal, complex form of nature. 
+With the excitement of incredible enthusiastic scientists that kindly guided me, I infused myself in an overall relentless seek for neurons behaving in funny shiny ways. Behind that brainy exhilaration, the experience and the outcomes were within an incredibly new and different framework for me - one that I was made able to massively appreciate thanks to the extraordinary set of those people that accompanied me and in all truth inspired me, every step of the way, through example, through care and ideas. I grew to further appreciate and witness the creativity that scientific work requires, but without doubt also the resilience and analytic thought that ought to always come with it.
 
-\end{acknowledgments}
+So here I thank you for your contributions for this project that I came to find so significant and pivotal in my experience, but also to the full extent of the beautiful environment you have made me feel a part of.
+
+To Leopoldo Petreanu, my mentor in this work, I am incredibly grateful for presenting me with this powerful opportunity, for being always present, always intrigued with the results and non-results, for teaching me so many concepts and procedures, but most of all for showing me an impressive sober way of thinking about problems, with palpable enthusiasm about science and its fundamentals.
+
+To Tiago, a profound thank you for the great amount of new learnings you have taught me, for you guidance in this project and in neuroscience, and for your devoted time in doing so - For the way you behave in your work and in your involvement and care with people around you.
+
+To Gabriela, Radhika, Rodrigo, Marina, Oihane, Camille and Hedi, for helping with first experiments, with first analysis, some of you for doing animal surgeries for this project, for always motivating me through troublesome troubleshooting, for the amazing discussions and incredibly useful feedback at all points of this process. Working and being alongside you has been nothing short of incredible. 
+
+Also to all of the people from Champalimaud, always active and with a great sense of community. To all the friendships I've come to meet here, I am most grateful.
+
+To my unbelievable family, my parents Rosa and Joaquim, who always manage to hold every single difficult thing together and have showed me what kindness and strenght are, to my awesome siblings André, Sara, Clara, Olívia, Tabetha. My gradparents, Vó Alexandrina, Vô Manuel, avó Odete and avô André, my aunt Maria, my aunt Suzana, my oncle Zé, my aunt Florbela and my could-be aunt Teresa. To D. Nivalda and D. Teresa, for having became part of what I call home.
+
+To Francisco Brito, for making me want to become more every day. For reminding me always of my purpose, for brightening up every single aspect of my life.
+
+Also to my friends from MEFT, from Madeira, from Lisbon, from Palaiseau. For being present, even when far-away. Every one of you made this process all the more enjoyable and meaningful.
+
+Thank you.
+
+%\end{acknowledgments}
 \clearpage
 \thispagestyle{empty}
 \cleardoublepage
