--- a/0.Inicio/4.Abstract.tex
+++ b/0.Inicio/4.Abstract.tex
@@ -1,5 +1,32 @@
-\begin{abstract}
 
-The Objective of this Work ... (English)
+%\begin{abstract}
+\section*{Abstract}
+In an effort to understand visual perception, neuroscience proposes broad questions on the neuronal circuitry, function and organization of the visual system. In particular, visual processes involve contextual spatial integration of a field of view. Surround modulation (SM) is a phenomenon thought to entail fundamental computations and mechanisms for perceptual visual processes. The effect involves neuron's receptive fields (RFs) - the corresponding areas of the visual field to which they respond upon visual stimulation. Classically, a neuron will fire a response to optimally oriented stimuli presented in its RF corresponding region. By definition, it does not respond when the stimuli is presented outside the RF region. However, it has been extensively measured and reported that when stimuli are presented simultaneously both inside and outside the RF, then the neuron can undergo surround modulation: It can respond either less -surround suppression - or more - surround facilitation - than when the stimulus was presented in the RF center alone. This effect depends on the stimuli characteristics. Thus, SM enables neuronal information from regions outside of the RF area of a neuron to influence that neuron's responses, adapting it according to its spatial context.
 
-\end{abstract}
+Most studies on SM have been done assuming the effect's symmetry and isotropy, with stimuli uniform spatial distributions. Here we conducted an investigation on the possible asymmetries, non-uniformities and tuning properties of the SM effect.
+
+The first component of the project was to devise the software tools for the intended stimuli presentation protocols: This was implemented with the arduino-based bpod system for stimuli, graphical user interface (GUI), and brain recordings' synchronization. The system was validated and used in the subsequent part of the project.
+
+The second component comprised the experimental and analytical study of SM spatial structure.
+
+In this work, using two-photon laser scanning microscopy in GCaMP6s-expressing transgenic thy1-mice, we displayed stimuli patches in center, and four surround parcels of the subject's field of view, with center and surround moving gratings going in multiple possible direction combinations, for each surround patch location and surround patch number.
+
+With this, we compared multiple configurations to assess the strength of the SM effect, it's significance across a large neuronal population, and how the effect differed across stimuli conditions.
+
+%Most notably, we found that suppression is the most frequent modulation, as expected from others previous reports. We then encountered 6 main significant comparison results: 
+%
+%Suppression was on average $10.8\%$ higher for double surround conditions than for single surround conditions; 
+%
+%A distance effect was found: The closed the RF location was to the surround patch, the higher the evoked surround suppression.
+%
+%Then, we found that, with double surround, suppression was $5.3\%$ stronger for colinearly-aligned surround patches than for flanking patches; 
+%
+%Also with double surround, when the surrounds' gratings were iso-oriented to the center gratings, suppression was $4.3\%$ higher than for cross-oriented conditions;
+%
+%The orientation of the center surround patch in regards to the cell's orientation selectivity held a significant influence over the distribution of the suppression indexes, so that, when center stimuli was with the anti-preferred orientation of the cell, this produced, for some conditions, higher suppression than when the center was with the preferred orientation. 
+%
+%There were also significant interaction effects between the collinear versus flanking effect and the iso-oriented versus cross-oriented effect.
+
+In this way, main significant asymmetries were indeed noted within the SM effect, adding to the discussion on the possible mechanisms underlying visual perception.
+
+%\end{abstract}
