--- a/0.Inicio/4.Resumo.tex
+++ b/0.Inicio/4.Resumo.tex
@@ -1,5 +1,19 @@
-\begin{resumo}
+\section*{Resumo}
+%\begin{resumo}
+Com o objectivo de compreender a percepção visual, o campo da neurociência propõe questões abrangentes quanto aos circuitos neuronais, à função e à organização do sistema visual. Em particular, processos visuais envolvem integração contextual do espaço visual. \textit{Surround modulation} (SM) é um fenónemo que tem sido implicado em computações e mecanismos fundamentais de processos de percepção visual. O efeito envolve o conceito de \textit{receptive field} (RF) de um neurónio - as áreas do campo visual às quais esse neurónio responde quando um estímulo visual lá se encontra. 
 
-O objectivo
+Classicamente, um neurónio irá ter uma resposta a estímulos apresentados com orientação ótima nesta região correspondente ao seu RF. Por definição, não responderá quando o estímulo for apresentado fora da região de RF. Por outro lado, tem sido extensivamente medido e reportado que, quando estímulos visuais são apresentados simultaneamente dentro e fora do RF de um neurónio, então esse neurónio pode sofrer \textit{surround modulation} (SM): Pode ou responder menos - \textit{surround suppression} - ou mais - \textit{surround facilitation} -do que o que respondia quando o estímulo era apresentado apenas no seu RF. Este efeito depende das caraterísticas dos estímulos. Desta forma, SM permite que informação neuronal de regiões fora da área de RF de um neurónio influenciem as suas respostas, adaptando-as de acordo com o contexto espacial do neurónio.
 
-\end{resumo}
+A maioria dos estudos sobre SM tem sido feita assumindo a simetria e isotropia do efeito, com estímulos uniformemente distribuído. Neste projecto, conduzimos uma investigação sobre as possíveis assimetrias, não uniformidade e nas propriedades de selectividade do efeito de SM.
+
+A primeira componente do projeto foi construir ferramentas de \textit{software} para os pretendidos protocolos de apresentação de estímulos visuais: estes foram implementados com o sistema bpod, baseado em arduino, para sincronização de estímulos, \textit{graphical user interface} (GUI) e gravações de respostas cerebrais. O sistema foir validado e usado na seguinte parte do projeto.
+
+A segunda componente envolveu o estudo experimental e analítico da estrutura espacial de SM.
+
+Neste trabalho, usando-se \textit{two-photon laser scanning microscopy} em roedores transgénicos da linha Thy1 que expressam o marcador GCaMP6s,  mostraram-se áreas no centro, e em quatro posições de \textit{surround} no campo visual do animal, com \textit{gratings} nas áreas do centro e do surround a mover-se em várias possíveis combinações de direções, para cada localização da área e número de áreas no \textit{surround}.
+
+Assim, compararam-se múltiplas configurações de estímulos para perscrutar a força do efeito de SM, a sua significância estatística sobre uma grande população neuronal e como o efeito difere para diferentes condições de estimulação visual.
+
+Desta forma, importantes assimetrias significativas foram de facto encontradas para o efeito de SM, acrescendo à discussão sobre os possíveis mecanismos subjacentes a processos de percepção visual.
+
+%\end{resumo}
