--- a/0.Inicio/5.Keywords.tex
+++ b/0.Inicio/5.Keywords.tex
@@ -1,6 +1,5 @@
-\begin{keywords}
-Keywords (English)
-\end{keywords}
+\section*{keywords}
+visual neuroscience perception non-uniform asymmetry anisotropy surround modulation suppression V1 receptive field bpod spatial structure direction orientation
 \clearpage
 \thispagestyle{empty}
 \cleardoublepage
