--- a/0.Inicio/5.PalavrasChave.tex
+++ b/0.Inicio/5.PalavrasChave.tex
@@ -1,6 +1,5 @@
-\begin{palavraschave}
-Palavras-Chave
-\end{palavraschave}
+\section*{Palavras-chave}
+visual neurociência percepção anisotropia assimetria modulação suppressão V1 campo receptivo bpod estrutura espacial direção orientação
 \clearpage
 \thispagestyle{empty}
 \cleardoublepage
