--- a/02.biblio2.bib
+++ b/02.biblio2.bib
@@ -210,23 +210,34 @@ title = {{Different Orientation-Tuning of Near and Far Surround Suppression in M
 volume = {345},
 year = {2015}
 }
+%@article{Marques2018,
+%abstract = {Visual motion is an ethologically important stimulus throughout the animal kingdom. In primates, motion perception relies on specific higher-order cortical regions. Although mouse primary visual cortex (V1) and higher-order visual areas show direction-selective (DS) responses, their role in motion perception remains unknown. Here, we tested whether V1 is involved in motion perception in mice. We developed a head-fixed discrimination task in which mice must report their perceived direction of motion from random dot kinematograms (RDKs). After training, mice made around 90{\%} correct choices for stimuli with high coherence and performed significantly above chance for 16{\%} coherent RDKs. Accuracy increased with both stimulus duration and visual field coverage of the stimulus, suggesting that mice in this task integrate motion information in time and space. Retinal recordings showed that thalamically projecting On-Off DS ganglion cells display DS responses when stimulated with RDKs. Two-photon calcium imaging revealed that neurons in layer (L) 2/3 of V1 display strong DS tuning in response to this stimulus. Thus, RDKs engage motion-sensitive retinal circuits as well as downstream visual cortical areas. Contralateral V1 activity played a key role in this motion direction discrimination task because its reversible inactivation with muscimol led to a significant reduction in performance. Neurometric-psychometric comparisons showed that an ideal observer could solve the task with the information encoded in DS L2/3 neurons. Motion discrimination of RDKs presents a powerful behavioral tool for dissecting the role of retino-forebrain circuits in motion processing. Using a head-fixed task, Marques et al. show that mice can discriminate the direction of motion of random dot kinetogram stimuli (RDK). RDKs elicit direction-selective responses in both On-Off DSGCs of the retina and in V1 L2/3 neurons. V1 inactivation impairs task performance, showing that this area plays a key role in motion perception.},
+%author = {Marques, Tiago and Summers, Mathew T. and Fioreze, Gabriela and Fridman, Marina and Dias, Rodrigo F. and Feller, Marla B. and Petreanu, Leopoldo},
+%doi = {10.1016/j.cub.2018.04.012},
+%file = {:C$\backslash$:/Users/Asus/Desktop/Disserta{\c{c}}{\~{a}}o/Thesis' Papers/marques2018.pdf:pdf},
+%issn = {09609822},
+%journal = {Current Biology},
+%keywords = {behavior,motion vision,two-photon microscopy,visual cortex},
+%number = {11},
+%pages = {1703--1713.e6},
+%pmid = {29779878},
+%publisher = {Elsevier Ltd.},
+%title = {{A Role for Mouse Primary Visual Cortex in Motion Perception}},
+%url = {https://doi.org/10.1016/j.cub.2018.04.012},
+%volume = {28},
+%year = {2018}
+%}
 @article{Marques2018,
-abstract = {Visual motion is an ethologically important stimulus throughout the animal kingdom. In primates, motion perception relies on specific higher-order cortical regions. Although mouse primary visual cortex (V1) and higher-order visual areas show direction-selective (DS) responses, their role in motion perception remains unknown. Here, we tested whether V1 is involved in motion perception in mice. We developed a head-fixed discrimination task in which mice must report their perceived direction of motion from random dot kinematograms (RDKs). After training, mice made around 90{\%} correct choices for stimuli with high coherence and performed significantly above chance for 16{\%} coherent RDKs. Accuracy increased with both stimulus duration and visual field coverage of the stimulus, suggesting that mice in this task integrate motion information in time and space. Retinal recordings showed that thalamically projecting On-Off DS ganglion cells display DS responses when stimulated with RDKs. Two-photon calcium imaging revealed that neurons in layer (L) 2/3 of V1 display strong DS tuning in response to this stimulus. Thus, RDKs engage motion-sensitive retinal circuits as well as downstream visual cortical areas. Contralateral V1 activity played a key role in this motion direction discrimination task because its reversible inactivation with muscimol led to a significant reduction in performance. Neurometric-psychometric comparisons showed that an ideal observer could solve the task with the information encoded in DS L2/3 neurons. Motion discrimination of RDKs presents a powerful behavioral tool for dissecting the role of retino-forebrain circuits in motion processing. Using a head-fixed task, Marques et al. show that mice can discriminate the direction of motion of random dot kinetogram stimuli (RDK). RDKs elicit direction-selective responses in both On-Off DSGCs of the retina and in V1 L2/3 neurons. V1 inactivation impairs task performance, showing that this area plays a key role in motion perception.},
-author = {Marques, Tiago and Summers, Mathew T. and Fioreze, Gabriela and Fridman, Marina and Dias, Rodrigo F. and Feller, Marla B. and Petreanu, Leopoldo},
-doi = {10.1016/j.cub.2018.04.012},
-file = {:C$\backslash$:/Users/Asus/Desktop/Disserta{\c{c}}{\~{a}}o/Thesis' Papers/marques2018.pdf:pdf},
-issn = {09609822},
-journal = {Current Biology},
-keywords = {behavior,motion vision,two-photon microscopy,visual cortex},
-number = {11},
-pages = {1703--1713.e6},
-pmid = {29779878},
-publisher = {Elsevier Ltd.},
-title = {{A Role for Mouse Primary Visual Cortex in Motion Perception}},
-url = {https://doi.org/10.1016/j.cub.2018.04.012},
-volume = {28},
+author = {Marques, Tiago and Nguyen, Julia and Fioreze, Gabriela and Petreanu, Leopoldo},
+journal = {Nature Neuroscience},
+
+pages = {759--764},
+volume = {21},
+title = {{The functional organization of cortical feedback inputs to primary visual cortex}},
 year = {2018}
 }
+
+
 @article{Lu2017,
 abstract = {Hemodynamic-based brain imaging techniques are typically incapable of monitoring brain activity with both high spatial and high temporal resolutions. In this study, we have used intrinsic signal optical imaging (ISOI), a relatively high spatial resolution imaging technique, to examine the temporal resolution of the hemodynamic signal. We imaged V1 responses in anesthetized monkey to a moving light spot. Movies of cortical responses clearly revealed a focus of hemodynamic response traveling across the cortical surface. Importantly, at different locations along the cortical trajectory, response timecourses maintained a similar tri-phasic shape and shifted sequentially across cortex with a predictable delay. We calculated the time between distinguishable timecourses and found that the temporal resolution of the signal at which two events can be reliably distinguished is about 80 milliseconds. These results suggest that hemodynamic-based imaging is suitable for detecting ongoing cortical events at high spatial resolution and with temporal resolution relevant for behavioral studies.},
 author = {Lu, Haidong D. and Chen, Gang and Cai, Junjie and Roe, Anna W.},
