--- a/1.Introduction/1.motivation.tex
+++ b/1.Introduction/1.motivation.tex
@@ -1,22 +1,22 @@
 \section{A systems neuroscience question: How does the nervous system enable perception of the visual world?}
 \label{sec:int_motivation}
 
-Neuroscience strives to understand the organization of the nervous system, it's function and processes, as well as its relation to animal behaviour. These broad goals require a multidisciplinary integration of concepts and tools derived from biology, biophysics, anatomy, genetics, statistics, modelling, computation, ecology and psychology. Furthermore,these questions can be approached at multiple scales: from the molecular and cellular levels to the systems and neural circuits levels.
+Neuroscience strives to understand the organization of the nervous system, its function and processes, as well as its relation to animal behaviour. These broad goals require a multidisciplinary integration of concepts and tools derived from biology, biophysics, anatomy, genetics, statistics, modelling, computation, ecology and psychology. Furthermore, these questions can be approached at multiple scales: from the molecular and cellular levels to the systems and neural circuits levels.
 
-Neurons and glia, the fundamental cells in a nervous system, agglomerate in neural circuits. In the human brain, there are about $10^{11}$ neurons, of a great morphological and functional variety. Moreover, neurons are adaptive cells: each neurons can behave differently depending on the connections and signals it receives and transmits. 
-Thus, disentangling the fundamental parameters of neuronal complexity and understanding the function of the nervous system require not only the signals and individual cell biophysical comprehension but also the understanding of the connectivity circuitry and mechanisms underlying a larger-scale neuronal network. Two systems with the same cells, arranged and interleaved with different connections would not behave equally. Correspondingly, the established knowledge on molecular and cellular neuroscience shall be integrated and complemented by a systems neuroscience approach, not as a simpler scaling step but within fundamentally different strategies. Investigating and deciphering the extraordinary questions about the nervous system in higher order completeness demands different methods, analysis and experimental paradigms than those within the study of the sum of its parts.
+Neurons and glia, the fundamental cells in the nervous system, agglomerate in neural circuits. In the human brain, there are about $10^{11}$ neurons, with a large variety of morphologies and functions. Moreover, each neurons can behave differently depending on the connections and signals it receives and transmits. 
+Thus, understanding the function of the nervous system requires not only understanding the biophysics and response properties of a single cell, but also the connectivity circuitry and mechanisms underlying a larger-scale neuronal network. Two systems with the same cells connected differently would not behave equally. Correspondingly, the established knowledge on molecular and cellular neuroscience shall be integrated and complemented with a systems neuroscience approach, not as a simpler scaling step but within fundamentally different strategies. Investigating and deciphering the extraordinary questions about the nervous system in higher order completeness demands to also use different methods, analysis and experimental paradigms than those within the study of the sum of its parts - both perspectives are essential.
 
 Neuronal systems can be described in three main functional sets: Sensory systems, motor systems and associational systems that link the former with the latter, developing more complex cognitive processes, such as perception, attention and emotions.
 
-Animals have the enriching ability to sense the world around them. We sense our surroundings through efficiently designed stimuli sensors, and produce distinctive sensations accordingly. We are equipped with exceptionally sensible, accurate and complete input feature detectors.
+Animals have the enriching ability to sense the world around them. We sense our surroundings through efficiently designed stimuli sensors, and our nervous system produces then distinctive sensations accordingly. We are equipped with exceptionally sensitive, accurate and complete input feature detectors.
 
-However, perhaps one of the most fascinating qualities about a sensorial experience is that we can mentally encapsulate it as a given configuration and readily identify it at a future similar reoccurrence. Our nervous system allows the formation of a correspondence map between the world outside and the interior reality. The computational processing level and the efficiency of such endeavour continues to excite laborious research: How does perception arise?
+However, perhaps one of the most fascinating qualities about a sensorial experience is that we can mentally encapsulate it as a given configuration and readily identify it at a future similar reoccurrence. Our nervous system allows the formation of a correspondence map between the world outside and the interior reality. The efficiency and computational problems associated with this process continue to raise important questions about how perception happens.
 
-In particular, the process of \textit{seeing} pertains astoundingly substantial and relevant information about the world in a remarkably efficient, fast, detailed and engaging way.
+In particular, the process of \textit{seeing} requires processing astoundingly substantial and relevant information about the world in a remarkably efficient, fast, detailed and engaging way.
 
 The understanding of visual perception and its processes is undertaken as one of the major withstanding challenges in systems neuroscience. Such knowledge would potentially entail relevant implications in health, biomedical, robotics and other technology fields. Most fundamentally, experimental and theoretical endeavours in the field strive to approach a satisfying answer to a short big question - How do we see, when we look?
 
-In this sensory modality, the system receives the physical image information from the retina and then parallel processes the features from the current state of the visual scene in an hierarchically organized neuronal structure. The information signals follow feedforward pathways and integrations are then carried in higher brain areas. Concurrently, feedback connections are superimposed in multiple higher order to lower order area connections, transmitting signals that underlie contextual information. Receiving this higher complexity input, neurons can then change their functioning state and produce new conjectures, educated guesses of high success probability about the input's nature. 
+In this sensory modality, the system receives the physical image information from the retina and then parallel processes the features from the current state of the visual scene in an hierarchically organized neuronal structure. The signals follow feedforward pathways with each level integrating information over a larger part of the visual field. Concurrently, feedback connections are superimposed in multiple higher order to lower order area connections, transmitting signals that underlie contextual information. Receiving this higher complexity input, neurons can then change their functioning state and produce new conjectures, educated guesses of high success probability about the input's nature. 
 The unification of these parallel outputs is proposed to finally amount to a conscious sensorial perception.
 
 There is no identity complete copy of the world outside within our perceived reality - Nonetheless, perhaps contrary to our intuition, sensitive sophisticated guesses can be just as effective, while efficient and biologically feasible within nature's parsimonious frames.
@@ -25,24 +25,24 @@ Nonetheless, fundamental questions remain for the large and complete understandi
 
 Here, we tackle a sensory neuronal property that is fundamentally implicated in visual information processing and that can yield profound insight onto the neuronal circuitry leading to visual perception - surround modulation (SM).
 
-Neurons in the primary visual cortex (V1) respond to visual stimuli when it is presented in a given region of the visual field. For each visually responsive neuron, there is thus a \textit{receptive field} (RF) - presenting a visual stimulus of optimal parameters to that neuron in the RF corresponding visual region, will evoke a spiking response. By definition, presenting stimuli outside the RF of a neuron will amount to no response in that cell.
+Neurons in the primary visual cortex (V1) respond to visual stimuli when it is presented in a given region of the visual field. For each visually responsive neuron, there is thus a \textit{receptive field} (RF) - presenting a visual stimulus of optimal parameters in that visual region will evoke a spiking response on that neuron. By definition, presenting stimuli outside the RF of a neuron will amount to no response in that cell.
 However, the simultaneous presentation of stimuli inside and outside the RF of a neuron will lead to a modulation of the cell's signal: the response will be either suppressed or facilitated in regards to the RF-only condition, depending on the center and surround stimuli characteristics.
 
-This property is always active during vision processes, as natural stimuli appear not as locally confined isolated instances but in a visual context. The effect has been described in several species (mouse, cat, primates, humans), in various visual system areas (from the retina to the extrastriate cortex) and in multiple sensory modalities (visual, auditory, somatosensory, olfactory). A mechanistic SM theory would in this way provide a manifestly insightful framework in which to understand sensory processing. 
+Surround modulation is always active during visual processes, as natural stimuli appear not as locally confined isolated instances but in a visual context. The effect has been described in several species (mouse, cat, primates, humans), in various visual system  areas (from the retina to the higher areas in the visual processing hierarchy) and in multiple sensory modalities (visual, auditory, somatosensory, olfactory). A mechanistic SM theory would in this way provide a manifestly insightful framework in which to understand sensory processing. 
 
-Moreover, understanding the circuitry that results in the SM effect and accounts for its properties can lead to profound knowledge about the function and the organization of the involved connections and network patterns - in particular, SM characterization can aid restrain circuitry models and interpret the network of inhibitory and excitatory neurons as well as feedforward, feedback and horizontal connections functionality in that perceptual integration context. Most specifically, \textit{far} surround modulation has been suggested to require feedback input given the underlying anatomy and properties it exhibits.
+Moreover, understanding the circuitry that results in the SM effect and accounts for its properties can lead to profound knowledge about the function and the organization of the involved connections and network patterns - in particular, SM characterization can aid restrain circuitry models and interpret the network of inhibitory and excitatory neurons as well as feedforward, feedback and horizontal connections functionality in that perceptual integration context. Most specifically, \textit{far} surround modulation, or how a cell’s response is influenced by stimuli that are far away from the neuron’s RF, has been suggested to require feedback input given the underlying anatomy and properties it exhibits.
 
 %EFFICIENT CODING, OBEJCT BOUNDARIES...
 
-Typically, SM is studied in either of two visual stimulation methods: By using radius expanding circular grating patches or by using grating patches confined to the RF area and surrounded with annular gratings whose inner radius are made to decrease. These studies have lead to important findings about the properties of SM and elicited fruitful debate on the circuitry architectures that can result in these characteristics in a compatible way.
+Typically, SM is studied using one of two visual stimulation methods: By using radius expanding circular grating patches or by using grating patches confined to the RF area and surrounded with annular gratings whose inner radius are made to decrease. These studies have lead to important findings about the properties of SM and elicited fruitful debate on the circuitry architectures that can result in these characteristics in a compatible way.
 
-The most extensive findings about SM have been done for the visual system, in particular in V1 area of cat and monkey.
+The most extensive findings about SM have been in the visual system, in particular for V1 area of cat and monkey.
 
 However, these approaches focus on static stimuli and further assume the effect's isotropy and circular symmetry. 
 
-On the other hand, recent work in mice has revealed that feedback connections from MT - one of the major V1 feedback-relaying areas - to V1 do not target lower-order areas irrespectively of the tuning of the higher-order sending areas. This study portrays that feedback mainly targets lower-order neurons that respond to the same positions in the visual field as the former, but that a subset of these connections are in fact dispersed to other neurons, depending on their selectivity: If a higher-order neuron is tuned to a particular direction, it presents a bias to connect to a lower-order neuron that responds to the visual field positions that would appear \textit{antecedent} to that direction line. Similarly, if a high-order neuron is orientation tuned, it presents a bias for connecting to lower-order neurons that map visual field regions at orthogonal zones to that high-order neuron's preferred orientation. 
+On the other hand, recent work in mice has revealed that feedback connections from one of the major V1 feedback-relaying areas do not target lower-order areas irrespectively of the tuning of the higher-order sending areas. This study portrays that feedback mainly targets lower-order neurons that respond to the same positions in the visual field as the former, but that a subset of these connections are in fact dispersed to other neurons, depending on their selectivity: If a higher-order neuron is tuned to a particular direction, it is biased to connect to a lower-order neuron that responds to the visual field positions that would appear \textit{antecedent} to that direction line. Similarly, if a high-order neuron is orientation tuned, it is biased for connecting to lower-order neurons that map visual field regions at orthogonal zones to that high-order neuron's preferred orientation. 
 
-Given the putative relation between interareal feedback and SM, this suggested possible anisotropies in the SM effect itself, possibly to relate to these areas' anatomy and to put at the perspective of the viable circuitry involved.
+Feedback is thought to be related to SM effects, in particular when surround stimuli are far from the RF. Given this, the finding of biased, tuned top-down connections suggested possible asymmetries also in the SM effect itself, possibly to related to these areas' anatomy and to put at the perspective of the viable circuitry involved.
 
 Additionally, SM is particularly characterized in cat and monkey, and some of its discovered properties have not yet been reported in mice. Discovering the features that govern SM in mice is specially relevant because a vast range of genetic tools are available to use in these species and because of their shorter lifespan:
 
