--- a/1.Introduction/4.outline.tex
+++ b/1.Introduction/4.outline.tex
@@ -3,17 +3,19 @@
 
 In the following section \ref{cap:TheoreticalIntroduction}, visual neuroscience main state of the art notions are described, to introduce the relevant theoretical concepts. 
 
-In the technology chapter \ref{cap:Technology}, we review the chemical indicators, genetic manipulation and physical mechanisms used for this experiment's expression of neural activity, as well as the recording optical technologies, namely intrinsic signal optical imaging and two-photon excitation laser-scanning microscopy.
+In the appendix chapter \ref{cap:Technology}, we review the chemical indicators, genetic manipulation and physical mechanisms used for this experiment's expression of neural activity, as well as the recording optical technologies, namely intrinsic signal optical imaging and two-photon excitation laser-scanning microscopy.
 
 Chapter \ref{cap:TechnicalImplementations} describes and explains the software development phase and implemented system for stimuli display, elucidating the technical outcomes of the project.
 
 Chapter \ref{cap:ExperimentalMethods} details the experimental methods, starting with the procedures performed with the animals, following with the visual stimulation setups for both intrinsic imaging and two-photon microscopy, then describing the experimental sessions' pipelines, stimuli presentation structure and stimuli parameters for the three protocols (RF, tuning and SM spatial structure study).
 
-The analysis of the experimental data required appropriate methods for the treatment of great amounts of possible parameter configurations, each for a large number of individual cells. In chapter \ref{cap:Analysis}, first we enunciate the raw outputs of an experimental session and follow with the preliminary image processing stages applied to the recorded imaging data - plane separation and registration. Suit2p pipeline is then presented, as it was used for semi-automated selection of regions of interest (ROIs) to regard as neurons. Finalizing the general data treatment stages, normalized fluorescence extraction is explained. After these points, we follow with the specific analysis methods for each protocol. To conclude the chapter, we present a review on statistical notions applied for the SM data comparison analysis.
+The analysis of the experimental data required appropriate methods for the treatment of great amounts of possible parameter configurations, each for a large number of individual cells. In chapter \ref{cap:Analysis}, first we enunciate the raw outputs of an experimental session and follow with the preliminary image processing stages applied to the recorded imaging data - plane separation and registration. Suit2p pipeline is then presented, as it was used for semi-automated selection of regions of interest (ROIs) to classify as neurons. Normalized fluorescence extraction is explained. Then, RF mapping methods and some example results are shown, along with the tuning analysis description and examples. Finally, some precluding considerations are made on the analysis methods for the final SM results.
 
-This project's results are then described in chapter \ref{cap:Results}. We start with the intrinsic optical imaging maps, follow with the general RF mapping results, tuning properties assessment and finish with the SM results analysis of individual example cells and a broader population study for SM effects.
+A review is also presented, on appendix chapter \ref{chapter:StatisticalTests}, on the statistical notions applied for the SM data comparison analysis.
 
-Finally, a discussion on the findings follows in chapter \ref{cap:Discussion}, integrating the previously established SM properties across species and sensory areas with those hereby presented and contextualizing this project's results within the SM current theories. We conclude with an overall review of the project's process and enumerate potential related future work.
+This project's results are then described in chapter \ref{cap:Results}. We start with SM results analysis of individual example cells and finish with a broader population study for SM effects.
+
+Finally, a discussion on the findings follows in chapter \ref{cap:conclusions}, integrating the previously established SM properties across species and sensory areas with those hereby presented and contextualizing this project's results within the SM current theories. We conclude with an overall review of the project's process.
 
 %In section \ref{Plan}, the experimental previous methods on the matter of SM are also regarded, motivating this proposal's goals and novelty. 
 
