--- a/2.Theoretical-introduction/main.tex
+++ b/2.Theoretical-introduction/main.tex
@@ -8,7 +8,7 @@
 \chapter{Theoretical Introduction}
 \label{cap:TheoreticalIntroduction}
 
-\textit{Present the chapter content.}
+\textit{In this chapter, we will expand on some of the fundamental neuroscience theoretical concepts related to the work portrayed in this project. Starting with an explanation on the brain visual pathways, detailing for both feedforward and feedback connections. Then the chapter presents the state of the art on surround modulation, particularizing for the visual cortex. We finish presenting the recent results on feedback organization rules that also motivated this project's scope.}
 
 %\input{2.Theoretical-introduction/1.sectiona.tex}
 \input{2.Theoretical-introduction/2.sectionb.tex}
