--- a/3.Technology/sectiona.tex
+++ b/3.Technology/sectiona.tex
@@ -15,17 +15,17 @@ However, many experimental goals require simultaneous recordings of extensive br
 
 Imaging techniques such as functional magnetic resonance imaging (fMRI), near-infrared spectroscopy (NIRS) and intrinsic signal optical imaging (ISOI) introduce less invasive means to simultaneously access larger regions of the brain while the subject is being presented to stimuli and also enable longitudal studies by repeated imaging sessions with the same individual animal. These methods are based on variations of optically measurable properties of physiological processes associated with neuronal activity.
 
-Slow reflectance light signals are intrinsically relayed from the surface of the striate cortex due to hemodynamic responses that correlate with neuronal activity (\cite{Cohen1973}). Neuronal firing or transmission induces blood changes - neurovascular coupling, \cite{Villringer1995}- that produce a light reflectance change.
+Slow reflectance light signals are intrinsically relayed from the surface of the striate cortex due to hemodynamic responses that correlate with neuronal activity \cite{Cohen1973}. Neuronal firing or transmission induces blood changes that produce a light reflectance change.
 
-Neuronal activity requires the hydrolysis of ATP and the oxy-hemoglobin (the protein hemoglobin in red blood cells binded to oxygen) molecules in the capillaries provide the majority of the oxygen used to regenerate ATP via glucose metabolism. Thus, an active brain region is associated with a finely localized increase in oxygen demand and thus a local rise in deoxy-hemoglobin (deoxygenated hemoglobin) and a depletion in oxy-hemoglobin concentrations. This is followed by an hemodynamic response of locally increased blood flow in the capilaries and dilatation of the closeby arteries to replenish and sufice the oxygen requirements (\cite{Grinvald1986)}, \cite{Frostig1990}).
+Neuronal activity requires the hydrolysis of ATP and the oxy-hemoglobin (the protein hemoglobin in red blood cells binded to oxygen) molecules in the capillaries provide the majority of the oxygen used to regenerate ATP via glucose metabolism. Thus, an active brain region is associated with a finely localized increase in oxygen demand and thus a local rise in deoxy-hemoglobin (deoxygenated hemoglobin) and a depletion in oxy-hemoglobin concentrations. This is followed by an hemodynamic response of locally increased blood flow in the capilaries and dilatation of the closeby arteries to replenish and sufice the oxygen requirements  \cite{Frostig1990}.
 
-In this neurally active situation, the hemodynamic response imposes a light reflectance variation, resulting from three major sources of intrinsic signal: the changes in blood volume (\cite{Grinvald1986)},\cite{Frostig1990}), blood oxygenation (\cite{Vanzetta1999}) and light scattering (\cite{HillKeynes1949}).
+In this neurally active situation, the hemodynamic response imposes a light reflectance variation, resulting from three major sources of intrinsic signal: the changes in blood volume\cite{Frostig1990}, blood oxygenation \cite{Vanzetta1999} and light scattering \cite{HillKeynes1949}.
 
-The blood volume component of the signal is the least spatially confined of the three factors but can nevertheless yield functional maps alone - for instance, with the injection of fluorescence dyes into the bloodstream (\cite{Frostig1990}).
+The blood volume component of the signal is the least spatially confined of the three factors but can nevertheless yield functional maps alone - for instance, with the injection of fluorescence dyes into the bloodstream \cite{Frostig1990}.
 
 The oxymetry signal is used for instance in fMRI techniques that identify the areas of the brain to which more oxygenated blood is being driven to, relying on how the magnetic properties of more and less oxygenated blood differ. A $1-2s$ delayed rise in oxygenation is associated to more active cells and brain usage. However, depending on the magnetic field intensity, this technique can have limited spatial resolution, as it relies on the transition phase that is also associated with the dilatation of arterioles adjoining the original activity sites, which can cause signal artifacts.
 
-On the other hand, light scattering changes enable precise temporal and spatial functional mappings of neuronal activity. Higher neuronal activity increases light scattering due to factors like ion movement, capillary expansion or neurotransmitter release (for a review,\cite{Cohen1973}). This increase peaks within $2-3 s$ of the stimulus onset.
+On the other hand, light scattering changes enable precise temporal and spatial functional mappings of neuronal activity. Higher neuronal activity increases light scattering due to factors like ion movement, capillary expansion or neurotransmitter release (for an overview, \cite{Cohen1973}). This increase peaks within $2-3 s$ of the stimulus onset.
 
 With these physiological events optical properties' intrinsic changes, one can extract the optical signals that correlate with that variance and thus with neuronal activity, using different imaging methods.
 
@@ -33,13 +33,13 @@ With these physiological events optical properties' intrinsic changes, one can e
 
 \subsection{Intrinsic Signal Optical Imaging: the technique}
 
-In the technique used in this work, ISOI (\cite{Grinvald1986}), the intrinsic signal is used to bring about information on the oxy-hemoglobin concentrations during neuronal activity. This method is regarded as one of the most advanced methods for a balance in spatial resolution and simultaneous coverage of different brain areas.
+In the technique used in this work, ISOI \cite{Grinvald1986}, the intrinsic signal is used to bring about information on the oxy-hemoglobin concentrations during neuronal activity. This method is regarded as one of the most advanced methods for a balance in spatial resolution and simultaneous coverage of different brain areas.
 
-Illumination by a stable output source at the red wavelenght level of $540 nm$ optimally excites the oxygenated blood flow, while the de-oxygenated blood reflects less light at this wavelength [REFERENCES]. 
+Illumination by a stable output source at the red wavelenght level of $540 nm$ optimally excites the oxygenated blood flow, while the de-oxygenated blood reflects less light at this wavelength. 
 
 These differentiated properties enable the mapping of the most active, de-oxygenated brain areas at the time of the initial local deoxy-hemoglobin increase, since these regions will reflect less red light than the inactive, amply oxygenated cerebral areas.
 
-ISOI utilizes this principle in brain areas which can be reached by light (around $500 \mu m$ maximum). In an animal with a window implantation and illumination of its primary cortex surface, one can record the brain area with a charge-coupled device (CCD) camera to monitor the changes in the reflected light signal from each region of the primary cortex of the subject while this animal is presented to stimuli. In this way, one obtains maps that make correspond the stimulation that the subject receives - visual, somatosensory, auditory [REFERENCES]- to the observed refleted light signal profile at that time interval and in that brain region, within relatively high temporal $80 ms$ \cite{Lu2017} and spatial resolutions in the order of $100 \mu m$ \cite{Grinvald1986}.
+ISOI utilizes this principle in brain areas which can be reached by light (around $500 \mu m$ maximum). In an animal with a window implantation and illumination of its primary cortex surface, one can record the brain area with a charge-coupled device (CCD) camera to monitor the changes in the reflected light signal from each region of the primary cortex of the subject while this animal is presented to stimuli. In this way, one obtains maps that make correspond the stimulation that the subject receives - visual, somatosensory, auditory - to the observed refleted light signal profile at that time interval and in that brain region, within relatively high temporal $80 ms$ \cite{Lu2017} and spatial resolutions in the order of $100 \mu m$ \cite{Grinvald1986}.
 
 For both anaesthetized and awake animals, the typical ISOI signal follows a tri-phasic structure: An initial dip, a negative peak at about 4-6s after stimulus onset, and a large rebound (\cite{Lu2017}, for example).
 
@@ -47,7 +47,7 @@ The signals' information is extracted by calculating differences between the ref
 
 Furthermore, in regards to the stimuli dependence of the signal's timecourse, the ISOI signal can be divided into a global stimulus-non-specific response and a local stimulus-specific response. This latter component stands as the actual mapping signal. 
 
-The properties of the ISOI signal in amplitude and temporal dynamics, as well as of its components, depend on both the stimuli and on the wavelength of the illumination light that the brain is receiving[REFERENCES].
+The properties of the ISOI signal in amplitude and temporal dynamics, as well as of its components, depend on both the stimuli and on the wavelength of the illumination light that the brain is receiving.
 
 A green light source at 546 nm is found optimal for obtaining an initial image of the brain surface and its blood vessels. On the other hand, a red light at 630 nm mostly translates changes in blood volume and oxygenation and can thus convey the dynamics of neuronal activity, while the animal is being stimulated (\cite{Zepeda2004}). 
 
