--- a/3.Technology/sectionc.tex
+++ b/3.Technology/sectionc.tex
@@ -1,7 +1,7 @@
 \section{Imaging techniques: Two photon laser-scanning microscopy}
 \label{sec:sectionc}
 
-Investigation of neuronal activity often requires access to deep layers of brain tissue, without compromise of the entire brain structure and while preserving the remaining more superficial layers. Deep ($>500 \mu m$ below the brain surface) optically sectioning in highly scattering tissue, minimally invasive techniques such as two photon laser-scanning microscopy (TPLSM) present an effective solution. 
+Investigation of neuronal activity often requires access to deep layers of brain tissue, without compromise of the entire brain structure and while preserving the remaining more superficial layers. Deep ($>500 \mu m$ below the brain surface) optically sectioning in highly scattering tissue, minimally invasive techniques such as two photon laser-scanning microscopy (TPLSM) present an effective solution. This section was based on \cite{Svoboda2006} review and \cite{Tsai} textbook.
 
 Moreover, neuronal phenomena can be relevant in broad scale ranges, both spatially and temporally. TPLSM presents images with submicron lateral resolution, micron axial resolution and millisecond timescales, appropriate for many neuronal processes.
 
@@ -119,7 +119,7 @@ Photodamage of the nervous tissue and photobleaching of the fluorophores during 
 Regarding the selected light source's efficiency, the spectral width of the pulsed laser beam $\Delta \lambda$ should be within the fluorophore molecules' two-photon excitation spectrum. This is given by:
 
 \begin{equation}
-\Delta \lambda ~ \dfrac{\lambda_0 ^2}{c \tau}
+\Delta \lambda \sim \dfrac{\lambda_0 ^2}{c \tau}
 \end{equation} 
 
 with $\lambda_0$ the laser beam's peak wavelength and $\tau$ the temporal width of the pulse. 
