--- a/5.Experimental-methods/5.Specifics-of-the-protocol-settings.tex
+++ b/5.Experimental-methods/5.Specifics-of-the-protocol-settings.tex
@@ -9,7 +9,7 @@ Every protocol underwent pseudorandomization of the trials: Each type of trial a
 \subsection{Receptive Field mapping stimuli}
 \label{subsec:subasectionC}
 
-This protocol consisted on the presentation of a 10º squared cell (in the mouse's referential) with a small moving bar inside. At each trial, this bar moved in four directions, in sequence but at random order - bottom to top (labelled 0º), left to right (90º) and the opposite ones (180º and 270º, respectively). The moving bar had $4º$ width and $25 º/s$ speed, with the dark at $0 WHAT$, the light at $204 WHAT$ and the background at $102 WHAT$. This patch appeared in any of 80 positions in the monitor, which was divided in a $10 \times 10$ grid, tiling a circle with 50º maximum radius from the center. The presentation was repeated in each grid position 14 times, to a total of 1120 trials, at shuffled order whithin each repetition.
+This protocol consisted on the presentation of a 10º squared cell (in the mouse's referential) with a small moving bar inside. At each trial, this bar moved in four directions, in sequence but at random order - bottom to top (labelled 0º), left to right (90º) and the opposite ones (180º and 270º, respectively). The moving bar had $4º$ width and $25 º/s$ speed, with the dark at $0$, the light at $204$ and the background at $102$ contrast levels. This patch appeared in any of 80 positions in the monitor, which was divided in a $10 \times 10$ grid, tiling a circle with 50º maximum radius from the center. The presentation was repeated in each grid position 14 times, to a total of 1120 trials, at shuffled order within each repetition.
 
 At each trial of $1 s$, the stimulus played for $220 ms$ and was followed by an $880ms$ ITI, summing 19 minutes of RF mapping at each session. 
 
@@ -48,7 +48,7 @@ At each trial of $1 s$, the stimulus played for $220 ms$ and was followed by an 
 
 The selectivity of each neuron was also controlled for spatial and temporal frequencies, as well as for more gratings' directions of movement. 
 
-With the same contrast configurations as for the previous protocol, a circular centered patch of $30º$ was presented at any of 8 directions: the previous and the intermediatedly oriented ones ($0º$, $45º$, $90º$, $135º$, $180º$, $225º$, $270º$ and $315º$). The gratings could have $0.02 /º$ or $0.04 /º$ of spatial frequency and $0.5 Hz$ or $1 Hz$ as temporal frequency. Together, each of these 32 configurations of direction and frequencies were presented in 25 repetitions, totaled at 800 trials and shuffled within the full protocol.
+With the same contrast configurations as for the previous protocol, a circular centred patch of $30º$ was presented at any of 8 directions: the previous and the intermediately oriented ones ($0º$, $45º$, $90º$, $135º$, $180º$, $225º$, $270º$ and $315º$). The gratings could have $0.02 /º$ or $0.04 /º$ of spatial frequency and $0.5 Hz$ or $1 Hz$ as temporal frequency. Together, each of these 32 configurations of direction and frequencies were presented in 25 repetitions, totaled at 800 trials and shuffled within the full protocol.
 
 Each trial had $1 s$, divided in a baseline of $5 ms$, a stimulus presentation of $900 ms$ and an ITI of $95 ms$, to a total of 14 minutes per session.
 
@@ -84,7 +84,7 @@ Each trial had $1 s$, divided in a baseline of $5 ms$, a stimulus presentation o
 \subsection{Surround Modulation stimuli}
 \label{subsec:subcsectionC}
 
-Finally, for the SM protocol the frequencies of $0.04 /º$ and $1 s$ were chosen based on previous reports of largest V1 stimulation [REFERENCES]. The light contrasts of the gratings went from $0$ at dark to $122.5$ at background and $255$ at the lightest. Each trial had $2 s$, with $0.5 s$ of baseline, $1 s$ of stimuli display and $0.5 s$ of ITI. 
+Finally, for the SM protocol the frequencies of $0.04 /º$ and $1 s$ were chosen based on previous reports of largest V1 stimulation. The light contrasts of the gratings went from $0$ at dark to $122.5$ at background and $255$ at the lightest. Each trial had $2 s$, with $0.5 s$ of baseline, $1 s$ of stimuli display and $0.5 s$ of ITI. 
 
 There were 124 possible trial types, repeated 20 times, to a total of 2480 trials in an 1 hour and 23 minutes session.
 
@@ -135,15 +135,18 @@ With these patches, five groups of stimuli types were used:
 
 \item $S2$ - only two surround patches, in opposite cardinal locations, either in the horizontal line ($S2H$) or the vertical line ($S2V$), both of them with gratings moving in the same of any of the 4 directions (8 types);
 
-\begin{figure}[H] \centering \includegraphics[width=8cm,height=8cm,keepaspectratio]{Figures/4.Chapter/S2.PNG} \caption{Diagram of stimuli group S2.} \end{figure}
+%\begin{figure}[H] \centering \includegraphics[width=8cm,height=8cm,keepaspectratio]{Figures/4.Chapter/S2.PNG} \caption{Diagram of stimuli group S2.} \end{figure}
 
 \item $S2+C$ - Two surround patches and the center patch, both surround patches either in the horizontal ($S2H+C$) or the vertical line ($S2V+C$), both with gratings moving in the same of the possible directions and the center patch with gratings moving in any direction, not necessarily being the same from the surround stimuli (32 types).
-
-\begin{figure}[H] \centering \includegraphics[width=10cm,height=10cm,keepaspectratio]{Figures/4.Chapter/S2C.PNG} \caption{Diagram of stimuli group S2C.} \end{figure}
-
 \end{itemize}
 
-
-\begin{figure}[H] \centering \includegraphics[width=12cm,height=12cm,keepaspectratio]{Figures/4.Chapter/SM.png} \caption{SM examples.} \end{figure}
-
+\begin{figure}[H] \centering
+\begin{minipage}{0.4\textwidth}
+ \includegraphics[width=8cm,height=8cm,keepaspectratio]{Figures/4.Chapter/S2.PNG} \caption{Diagram of stimuli group S2.}
+\end{minipage} 
+\begin{minipage}{0.4\textwidth}
+\includegraphics[width=10cm,height=10cm,keepaspectratio]{Figures/4.Chapter/S2C.PNG} \caption{Diagram of stimuli group S2C.} 
+\end{minipage}
+\end{figure}
+%\begin{figure}[H] \centering \includegraphics[width=12cm,height=12cm,keepaspectratio]{Figures/4.Chapter/SM.png} \caption{SM examples.} \end{figure}
 Group $C$ was used as a more specific confirmation for the receptive field findings: here the stimuli was now in the center of the screen with the selected size for the analysis. Groups $S1$ and $S2$ provided the data that allowed to exclude from the analysis the cells that responded to stimulation in the defined surround. These had a receptive field that overlapped what we regarded as the surround and thus did not meet the criteria for investigating surround modulation effects in this experiment's designed manner. With the cells that did respond to group $C$ but did not to group $S1$ nor $S2$, we could then regard the effects of actual surround stimulation by examinating the responses to stimuli in the groups $S1+C$ and $S2+C$.
