--- a/7.Results/main.tex
+++ b/7.Results/main.tex
@@ -8,7 +8,7 @@
 \chapter{Results}
 \label{cap:Results}
 
-\textit{Present the chapter content.}
+\textit{The results obtained for the SM effects are hereby presented: we start with individual example cell's assessment and move to a population analysis.}
 
 \input{7.Results/1.sectiona.tex}
 %\cleardoublepage
