--- a/5.Experimental-methods/4.Session-and-trial-structure.tex
+++ b/5.Experimental-methods/4.Session-and-trial-structure.tex
@@ -30,7 +30,7 @@ Having found this position, the recordings were started, fixed to external trigg
 
 \subsection{Stimuli presentation structure}
 
-The experimental recorded stimuli presentation of a session comprised three main protocols for each mouse and each of that animal's V1 imaged position: A protocol to establish the receptive fields of the imaged neurons ($\texttt{StimPresProt\_RF}$), another to regard their tuning properties ($\texttt{StimPresProt\_tuning}$) and a last protocol designed for the actual surround modulation examinations ($\texttt{StimPresProt\_RF}$). 
+The experimental recorded stimuli presentation of a session comprised three main protocols for each mouse and each of that animal's V1 imaged position: A protocol to establish the receptive fields of the imaged neurons, another to regard their tuning properties  and a last protocol designed for the actual surround modulation examinations. 
 
 Each protocol involved a pseudorandomized sequence of trials - N repetitions of X trial types. Repetitions of each stimulus type are required in order to enhance the signal to noise ratio of the responses by trial averaging. 
 
