--- a/6.Analysis/main.tex
+++ b/6.Analysis/main.tex
@@ -8,11 +8,12 @@
 \chapter{Analysis}
 \label{cap:Analysis}
 
-\textit{Upon the experimental procedures, a developed pipeline was followed for the analysis of the RF, tuning and SM protocols, for each animal and imaging session. This process will be described hereby, along with the explanation of each utilized tool, analysis scripts and software. This chapter will first summarize the registration method utilized, the regions of interest selection technique, as well as the subsequent data treatment and used statistical tools. In particular, for this project's experiments' analysis, Suit2p software for automated selection of neurons in a raw image and corresponding fluorescence traces extraction was implemented. This package will here be concisely presented and compared with previously used methods.}
+\textit{Upon the experimental procedures, a developed pipeline was followed for the analysis of the RF, tuning and SM protocols, for each animal and imaging session. This process will be described hereby, along with the explanation of each utilized tool, analysis scripts and software. This chapter will first summarize the registration method utilized, the regions of interest selection technique, as well as the subsequent data treatment. In particular, for this project's experiments' analysis, Suit2p software for automated selection of neurons in a raw image and corresponding fluorescence traces extraction was implemented. The then also describe the RF analysis methods, followed by the tuning and finalize with some considerations on the SM analysis.
+The statistical tools also used in the analysis are described in appendix chapter \ref{chapter:StatisticalTests}. }
 
 \input{6.Analysis/1.ExperimentsOutputs.tex}
 \input{6.Analysis/2.Preprocessing.tex}
 \input{6.Analysis/3.Suit2pPipeline.tex}
 \input{6.Analysis/4.DataTreatment.tex}
-\input{6.Analysis/5.StatisticalTests.tex}
+%\input{6.Analysis/5.StatisticalTests.tex}
 %\cleardoublepage
